--- a/index.html
+++ b/index.html
@@ -24,32 +24,14 @@
             width: 80%;
             max-width: 1200px;
             height: 70%;
-            background: rgba(0, 0, 0, 0.8);
-            border: 2px solid #6200ea;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            background: #000000; /* Fondo negro sólido */
+            border: 2px solid #6200ea; /* Borde morado */
+            box-shadow: 0 0 20px rgba(100, 0, 234, 0.5); /* Resplandor morado */
             border-radius: 20px;
             padding: 20px;
             overflow-y: auto;
             position: relative;
             transition: all 0.3s ease-in-out;
-        }
-
-        /* Animación de carga */
-        .console::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, rgba(100, 0, 234, 0.1), rgba(100, 0, 234, 0.3));
-            animation: scan 2s infinite linear;
-            pointer-events: none;
-        }
-
-        @keyframes scan {
-            0% { transform: translateY(-100%); }
-            100% { transform: translateY(100%); }
         }
 
         /* Mensajes de salida */
