--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         }
 
         .console {
-            width: 90%;
+            width: 95%;
             max-width: 1200px;
-            height: 80%;
+            height: 85%;
             background: #0f172a;
             border: 1px solid #3b82f6;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
@@ -29,6 +29,7 @@
             padding: 20px;
             overflow-y: auto;
             position: relative;
+            transition: all 0.3s ease-in-out;
         }
 
         .console::-webkit-scrollbar {
@@ -53,6 +54,7 @@
             margin-bottom: 10px;
             font-size: 14px;
             line-height: 1.5;
+            word-wrap: break-word;
         }
 
         .command-input {
@@ -106,7 +108,7 @@
         }
 
         .welcome-message {
-            font-size: 18px;
+            font-size: clamp(14px, 2vw, 18px);
             text-align: center;
             margin-bottom: 20px;
             animation: fadeIn 1s ease-in-out;
@@ -115,6 +117,47 @@
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
+        }
+
+        @media (max-width: 768px) {
+            .console {
+                width: 100%;
+                height: 90%;
+                padding: 15px;
+                border-radius: 8px;
+            }
+
+            .welcome-message {
+                font-size: clamp(12px, 2vw, 16px);
+            }
+
+            .output {
+                font-size: clamp(12px, 1.5vw, 14px);
+            }
+
+            .input-container input {
+                font-size: clamp(12px, 1.5vw, 16px);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .console {
+                height: 95%;
+                padding: 10px;
+                border-radius: 6px;
+            }
+
+            .welcome-message {
+                font-size: clamp(10px, 2vw, 14px);
+            }
+
+            .output {
+                font-size: clamp(10px, 1.5vw, 12px);
+            }
+
+            .input-container input {
+                font-size: clamp(10px, 1.5vw, 14px);
+            }
         }
     </style>
 </head>
